--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -67,3 +67,25 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* Solution */
+.modal {
+  display: flex;
+  gap: 16px;
+  padding: 16px;
+}
+
+.info {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.header {
+  flex-grow: 1; 
+  font-size: 18px;
+  padding-bottom: 8px;
+}
+
+.buttons {
+  margin-top: 16px;
+}
