--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,52 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+/* Solution */
+.header,
+.footer{
+  display: flex;
+  justify-content: space-between;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 81%;
+}
+
+ul{
+  list-style-type: none;
+  padding: 0px;
+}
+
+ul li {
+  padding: 10px;
+}
+
+ul li a {
+  color: gray;
+  text-decoration: none;
+}
+
+.left-links {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.right-links {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-end;
+}
+
+button {
+  padding: 8px;
+}
+
+.footer{
+  background-color: #eeeeee;
+}
